# apexe

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  mkdocs.yml
.github/workflows/: ci.yml  deploy-docs.yml
docs/: FEATURE_MANIFEST.md  quickstart.md  tech-design.md  user-manual.md
docs/apcore-integration/: tech-design.md
docs/features/: f1-project-skeleton.md  f2-cli-scanner-engine.md  f3-binding-generator.md  f4-serve-integration.md  f5-governance-defaults.md  overview.md  v2-f1-scanner-adapter.md  v2-f2-module-executor.md  v2-f3-binding-output.md  v2-f4-mcp-server.md  v2-f5-governance.md  v2-f6-error-migration.md  v2-f7-config-integration.md  v2-overview.md
docs/plans/: f1-project-skeleton.json  f2-cli-scanner-engine.json  f3-binding-generator.json  f4-serve-integration.json  f5-governance-defaults.json  v2-f1-scanner-adapter.json  v2-f2-module-executor.json  v2-f3-binding-output.json  v2-f4-mcp-server.json  v2-f5-governance.json  v2-f6-error-migration.json
examples/: README.md  programmatic.rs
examples/basic/: README.md  run.sh
examples/basic/output/modules/: cli.git.binding.yaml
examples/programmatic/: README.md
hooks/: pre-commit
src/: config.rs  errors.rs  lib.rs  main.rs
src/adapter/: annotations.rs  converter.rs  mod.rs  schema.rs
src/binding/: binding_gen.rs  mod.rs  module_id.rs  schema_gen.rs  writer.rs
src/cli/: mod.rs
src/executor/: mod.rs
src/governance/: acl.rs  annotations.rs  audit.rs  mod.rs  sandbox.rs
src/mcp/: mod.rs  server.rs
src/models/: mod.rs
src/module/: cli_module.rs  executor.rs  mod.rs
src/output/: loader.rs  mod.rs  yaml.rs
src/scanner/: cache.rs  completion.rs  discovery.rs  man_page.rs  mod.rs  orchestrator.rs  pipeline.rs  plugins.rs  protocol.rs  resolver.rs
src/scanner/parsers/: clap_parser.rs  click.rs  cobra.rs  gnu.rs  mod.rs  structured_output.rs
src/serve/: config_gen.rs  handler.rs  http.rs  loader.rs  mcp_types.rs  mod.rs  registry.rs  stdio.rs
tests/: binding_integration.rs  cli_integration.rs  governance_integration.rs  scanner_integration.rs  serve_integration.rs
