[package]
name = "apexe"
version = "0.1.0"
edition = "2021"
description = "Outside-In CLI-to-Agent Bridge"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
nom = "7"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
shell-words = "1"
thiserror = "2"
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
which = "7"

[dev-dependencies]
assert_cmd = "2"
http-body-util = "0.1"
predicates = "3"
rstest = "0.23"
tempfile = "3"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "apexe"
path = "src/main.rs"
