[package]
name = "apexe"
version = "0.1.0"
edition = "2021"
description = "Outside-In CLI-to-Agent Bridge"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1"
async-trait = "0.1"
apcore = { path = "../apcore-rust" }
apcore-cli = { path = "../apcore-cli-rust" }
apcore-mcp = { path = "../apcore-mcp-rust" }
apcore-toolkit = { path = "../apcore-toolkit-rust" }
clap = { version = "4", features = ["derive"] }
dirs = "5"
nom = "7"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
shell-words = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "7"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rstest = "0.23"
tempfile = "3"
tokio-test = "0.4"


[[bin]]
name = "apexe"
path = "src/main.rs"

[patch.crates-io]
apcore = { path = "../apcore-rust" }
apcore-cli = { path = "../apcore-cli-rust" }
apcore-mcp = { path = "../apcore-mcp-rust" }
